--- a/fukui-bygrade.html
+++ b/fukui-bygrade.html
@@ -3,8 +3,8 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="./style.css">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:image"  content="https://codeforkosen.github.io/kosen-opendata/ogp.png">
-  <meta name="twitter:image" content="https://codeforkosen.github.io/kosen-opendata/ogp.png">
+  <meta property="og:image"  content="https://codeforkosen.github.io/kosen-apps/fukui.png">
+  <meta name="twitter:image" content="https://codeforkosen.github.io/kosen-apps/fukui.png">
 </head>
 <body>
   <script type="module">
@@ -12,7 +12,7 @@
   import { toJA } from "./toJA.js";
   
   window.onload = async () => {
-    const url = "./data/fukui/fukui-kosen-subject.csv";
+    const url = "https://codeforkosen.github.io/kosen-opendata/data/fukui/fukui-kosen-subject.csv";
     const csv = await CSV.fetch(url);
     const data = CSV.toJSON(csv);
     console.log(data);
@@ -59,7 +59,7 @@
   <div id=main></div>
 
   <hr>
-  Data: 福井高専オープンデータ（非公式） <a href=./data/fukui/fukui-kosen-subject.csv>fukui-kosen-subject.csv</a><br>
+  Data: 福井高専オープンデータ（非公式） <a href=https://codeforkosen.github.io/kosen-opendata/data/fukui/fukui-kosen-subject.csv>fukui-kosen-subject.csv</a><br>
   App: <a href=https://fukuno.jig.jp/3039>福野泰介の一日一創</a> (<a href=https://github.com/codeforkosen/kosen-opendata/>src on GitHub</a>)<br>
 
 </body>
