--- a/ranking.html
+++ b/ranking.html
@@ -98,7 +98,8 @@ onload = async () => {
   }
 
   hr();
-  link("App: 福野泰介の一日一創", "https://fukuno.jig.jp/");
+  link("App: 福野泰介の一日一創", "https://fukuno.jig.jp/3262");
+  link("GitHub: Code for KOSEN", "https://github.com/codeforkosen/kosen-apps/");
   link("Data: 高専オープンデータ - 環境報告書2020オープンデータ(国立高専別エネルギー収支状況)（令和2年10月）", "https://github.com/codeforkosen/kosen-opendata/tree/main/data/kiko/kankyo2020");
   link("Data: 高専オープンデータ - 高専キャンパス", "https://github.com/codeforkosen/kosen-opendata");
 };
