--- a/ranking.html
+++ b/ranking.html
@@ -4,8 +4,48 @@ import { CSV } from "https://js.sabae.cc/CSV.js";
 import { Num } from "https://js.sabae.cc/Num.js";
 
 const makeRanking = (data) => {
+  makeRankingCO2diff(data);
   makeRankingCO2(data);
   makeRankingArea(data);
+};
+
+const makeRankingCO2diff = (data) =>   {
+  const sec = add("section");
+  const h2 = create("h2");
+  h2.textContent = "炭素削減率ランキング";
+  sec.appendChild(h2);
+  const co2types = [
+    "電気起算校舎(t-CO2)",
+    "化石燃料起算校舎(t-CO2)",
+    "電気起算寄宿舎(t-CO2)",
+    "化石燃料起算寄宿舎(t-CO2)",
+  ];
+  const calcCO2 = (k) => co2types.reduce((prev, cur) => prev + parseFloat(k[cur]), 0);
+  const list = data.co2.data.map(d => {
+    const co2 = calcCO2(d);
+    const dp = data.co2Past.data.find(d2 => d.事業所名 == d2.事業所名);
+    const co2past = calcCO2(dp);
+    const co2diff = co2past - co2;
+    const co2ratio = co2diff / co2past;
+    const co2ratios = (co2diff > 0 ? "" : "+") + (-co2diff / co2past * 100).toFixed(1) + "%";
+    //console.log(d.事業所名, co2, co2past, co2diff)
+    return {
+      事業所名: d.事業所名,
+      co2, co2past, co2diff, co2ratio, co2ratios
+    };
+  //}).sort((a, b) => a.co2diff - b.co2diff);
+  }).sort((a, b) => b.co2ratio - a.co2ratio);
+  const tbl = create("table");
+  sec.appendChild(tbl);
+  for (let i = 0; i < list.length; i++) {
+    const d = list[i];
+    const tr = create("tr");
+    tbl.appendChild(tr);
+    addtd(tr, (i + 1) + "位");
+    addtd(tr, d["事業所名"], getKosenLink(data, d["事業所名"]));
+    //addtd(tr, Num.addComma(d.ratios + "t-CO2"));
+    addtd(tr, d.co2ratios + " (" + d.co2past + "→" + d.co2 + " t-CO2)");
+  }
 };
 
 const makeRankingCO2 = (data) =>   {
@@ -71,8 +111,8 @@ onload = async () => {
     // energyinput: { url: "https://codeforkosen.github.io/kosen-opendata/data/kiko/kankyo2020/kankyo2020_energyinput.csv", },
     co2: { url: "https://codeforkosen.github.io/kosen-opendata/data/kiko/kankyo2021/kankyo2021_co2.csv", },
     campus: { url: "https://codeforkosen.github.io/kosen-opendata/data/kosen_campus.csv", },
-    facilityarea_past: { url: "https://codeforkosen.github.io/kosen-opendata/data/kiko/kankyo2020/kankyo2020_facilityarea.csv" },
-    co2_past: { url: "https://codeforkosen.github.io/kosen-opendata/data/kiko/kankyo2020/kankyo2020_co2.csv", },
+    facilityareaPast: { url: "https://codeforkosen.github.io/kosen-opendata/data/kiko/kankyo2020/kankyo2020_facilityarea.csv" },
+    co2Past: { url: "https://codeforkosen.github.io/kosen-opendata/data/kiko/kankyo2020/kankyo2020_co2.csv", },
   };
   for (const name in data) {
     const d = data[name];
@@ -84,13 +124,13 @@ onload = async () => {
   style({
     body: { "max-width": "90vw" },
     section: { display: "inline-block", "font-size": "80%", "margin": "0 1em" },
-    td: { "font-size": "80%" },
+    td: { "font-size": "80%", "text-align": "left" },
   });
 
   makeRanking(data);
 
   hr();
-  link("App: 福野泰介の一日一創", "https://fukuno.jig.jp/3262");
+  link("App: 福野泰介の一日一創", "https://fukuno.jig.jp/3353");
   link("History: 高専ランキング2020", "ranking2020.html");
   link("GitHub: Code for KOSEN", "https://github.com/codeforkosen/kosen-apps/");
   link("Data: 高専オープンデータ - 環境報告書2021オープンデータ(国立高専別エネルギー収支状況)（令和3年9月）", "https://github.com/codeforkosen/kosen-opendata/tree/main/data/kiko/kankyo2021");
